--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - PORT=3000
       - DATABASE_URL=postgres://user:@postgres-rails:5432
       - GITHUB_CODESPACES_PORT_FORWARDING_DOMAIN=${GITHUB_CODESPACES_PORT_FORWARDING_DOMAIN}
+      - OPENAI_API_KEY=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
     depends_on:
       - "postgres-rails"
 
